RESOLVED FIXED258791
[FFC] Fix cross axis flex item placement when multiple flex lines are present
https://bugs.webkit.org/show_bug.cgi?id=258791
Summary [FFC] Fix cross axis flex item placement when multiple flex lines are present
alan
Reported 2023-07-02 21:47:41 PDT
ssia
Attachments
[fast-cq]Patch (1.50 KB, patch)
2023-07-02 21:49 PDT, alan
no flags
alan
Comment 1 2023-07-02 21:49:51 PDT
Created attachment 466909 [details] [fast-cq]Patch
EWS
Comment 2 2023-07-03 06:48:57 PDT
Committed 265718@main (e2c6f1741355): <https://commits.webkit.org/265718@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 466909 [details].
Radar WebKit Bug Importer
Comment 3 2023-07-03 06:49:16 PDT
Note You need to log in before you can comment on or make changes to this bug.