[FFC] Fix cross axis flex item placement when multiple flex lines are present https://bugs.webkit.org/show_bug.cgi?id=258791

Reviewed by Antti Koivisto.

Use the previous line's _position_ and size to compute current line's position.

* Source/WebCore/layout/formattingContexts/flex/FlexLayout.cpp:
(WebCore::Layout::FlexLayout::handleCrossAxisAlignmentForFlexLines const):

Canonical link: https://commits.webkit.org/265718@main